@@ -3,188 +3,132 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.gmu.swe.knarr</groupId>
     <artifactId>Knarr</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <galette.version>1.0.0-SNAPSHOT</galette.version>
+        <galette.agentJar>${edu.neu.ccs.prl.galette:galette-agent:jar}</galette.agentJar>
+        <galette.java>${project.build.directory}/galette/java</galette.java>
+        <galette.cache>${project.build.directory}/galette/cache</galette.cache>
+    </properties>
+
     <repositories>
         <repository>
-            <id>ossrh</id>
-            <name>ossrh</name>
+            <id>ossrh-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
         </repository>
     </repositories>
-    <build>
-        <resources>
-            <resource>
-                <directory>resources</directory>
-                <includes>
-                    <include>phosphor-mv</include>
-                </includes>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <artifactId>exec-maven-plugin</artifactId>
-                <groupId>org.codehaus.mojo</groupId>
-                <executions>
-                    <execution>
-                        <id>instrument-jre</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${basedir}/instrumentJRE.sh</executable>
-                        </configuration>
-                    </execution>
-                    <!-- <execution> <id>run-dacapo</id> <phase>integration-test</phase>
-                        <goals> <goal>exec</goal> </goals> <configuration> <skip>${dacapo.skip}</skip>
-                        <executable>${basedir}/runDacapo.sh</executable> </configuration> </execution> -->
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.bazaarvoice.maven.plugins</groupId>
-                <artifactId>process-exec-maven-plugin</artifactId>
-                <version>0.8</version>
-                <executions>
-                    <execution>
-                        <id>start-jar</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                        <configuration>
-                             <workingDir>../../knarr-server/</workingDir>
-                            <waitAfterLaunch>5</waitAfterLaunch>
-                            <arguments>
-                                <argument>${basedir}/run-knarr-server.sh</argument>
-                                <argument>${basedir}/..</argument>
-                                <argument>${z3.location}</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>stop-jar-process</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop-all</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <jvm>${project.build.directory}/jre-inst/bin/java</jvm>
-                    <argLine>-Xbootclasspath/p:${project.build.directory}/${project.build.finalName}.jar
-                        -javaagent:${project.build.directory}/${project.build.finalName}.jar</argLine>
-                    <reuseForks>false</reuseForks>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.1</version>
-                <configuration>
-                    <archive>
-                        <manifestFile>resources/META-INF/MANIFEST.MF</manifestFile>
-                    </archive>
-                    <excludes>
-                        <exclude>java/</exclude>
-                        <exclude>sun/</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <!-- <relocations>
-                                <relocation>
-                                    <pattern>za.ac.sun.cs.green</pattern>
-                                    <shadedPattern>edu.gmu.swe.knarr.za.ac.sun.cs.green</shadedPattern>
-                                </relocation>
-                            </relocations> -->
-                            <minimizeJar>false</minimizeJar>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-    <profiles>
-        <profile>
-            <id>mac</id>
-            <activation>
-                <os>
-                    <family>mac</family>
-                </os>
-            </activation>
-            <properties>
-                <z3.location>${basedir}/../z3-mac-bin/</z3.location>
-            </properties>
-        </profile>
-        <profile>
-            <id>linux</id>
-            <activation>
-                <os>
-                    <family>linux</family>
-                </os>
-            </activation>
-            <properties>
-                <z3.location>${basedir}/../z3-4.8.9-x64-ubuntu-16.04/bin/</z3.location>
-            </properties>
-        </profile>
-    </profiles>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-        </dependency>
-        <dependency>
-            <groupId>edu.gmu.swe.phosphor</groupId>
-            <artifactId>Phosphor</artifactId>
-            <version>0.0.4-SNAPSHOT</version>
+            <groupId>edu.neu.ccs.prl.galette</groupId>
+            <artifactId>galette-agent</artifactId>
+            <version>${galette.version}</version>
         </dependency>
         <dependency>
             <groupId>edu.gmu.swe.greensolver</groupId>
             <artifactId>green</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- <dependency> <groupId>net.jonbell.java</groupId> <artifactId>CRIJ</artifactId> 
-            <version>0.0.1-SNAPSHOT</version> </dependency> -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
+                <executions>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>integration-tests</id>
+            <activation>
+                <property>
+                    <name>!skipITs</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>edu.neu.ccs.prl.galette</groupId>
+                        <artifactId>galette-maven-plugin</artifactId>
+                        <version>${galette.version}</version>
+                        <executions>
+                            <execution>
+                                <id>instrument</id>
+                                <goals>
+                                    <goal>instrument</goal>
+                                </goals>
+                                <phase>process-test-resources</phase>
+                                <configuration>
+                                    <outputDirectory>${galette.java}</outputDirectory>
+                                    <linkedCaches>
+                                        <linkedCache>${galette.cache}</linkedCache>
+                                    </linkedCaches>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>3.1.2</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <jvm>${galette.java}/bin/java</jvm>
+                            <argLine>
+                                -Xbootclasspath/a:${galette.agentJar}
+                                -javaagent:${galette.agentJar}
+                                --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                            </argLine>
+                            <reuseForks>false</reuseForks>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
